<?xml version="1.0"?>
<package format="3">
  <name>check_robot_moving</name>
  <version>0.0.0</version>
  <description>The check robot moving package</description>

  <maintainer email="fmasaki2020@gmail.com">Masaki Fujiwara</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>waypoint_manager_msgs</depend>

</package>
