<?xml version="1.0"?>
<package format="3">
  <name>goal_event_handler</name>
  <version>0.0.0</version>
  <description>The goal_event_handler package</description>
  
  <!-- <maintainer email="s16c1077hq@s.chibakoudai.jp">Naoki Takahashi</maintainer> -->
  <maintainer email="fmasaki2020@gmail.com">Masaki Fujiwara</maintainer>
  <license>MIT</license>

  <!-- ビルドツール依存関係 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ビルド時と実行時の依存関係 -->
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>waypoint_manager_msgs</depend>

  <export>
    <!-- 他のツールが追加情報を要求する場合にここに記述 -->
  </export>
</package>
