<package format="2">
  <name>rviz_plugin_goalradius</name>
  <version>1.0.0</version>
  <description>Rviz plugin goalradius</description>

  <author email="fmasaki2020@gmail.com">MasakiFujiwara</author>
  <maintainer email="fmasaki2020@gmail.com">MasakiFujiwara</maintainer>

  <license>Appache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>class_loader</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rviz</depend>
  <depend>eigen</depend>
  <depend>qtbase5-dev</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
