<?xml version="1.0"?>
<package format="3">
  <name>waypoint_manager</name>
  <version>0.0.0</version>
  <description>The waypoint_manager package</description>

  <!-- <maintainer email="s16c1077hq@s.chibakoudai.jp">Naoki Takahashi</maintainer> -->
  <maintainer email="fmasaki2020@gmail.com">Masaki Fujiwara</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>goal_event_handler</depend>
  <depend>check_robot_moving</depend>
  <depend>waypoint_manager_msgs</depend>
  <depend>waypoint_server</depend>
  <depend>waypoint_reconfigure</depend>
  <depend>waypoint_visualization</depend>

</package>
