<?xml version="1.0"?>
<package format="3">
  <name>waypoint_manager_msgs</name>
  <version>0.0.0</version>
  <description>The waypoint_manager_msgs package</description>

  <!-- <maintainer email="s16c1077hq@s.chibakoudai.jp">Naoki Takahashi</maintainer> -->
  <maintainer email="fmasaki2020@gmail.com">Masaki Fujiwara</maintainer>
  <license>MIT</license>

  <!-- ビルドツール依存関係 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- メッセージ生成のための依存関係 -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- 実行時のメッセージ依存関係 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <!-- 他のツールが追加情報を要求する場合にここに記述 -->
  </export>
</package>
