<?xml version="1.0"?>
<package format="3">
  <name>waypoint_reconfigure</name>
  <version>0.0.0</version>
  <description>The waypoint reconfigure package</description>

  <maintainer email="fmasaki2020@gmail.com">Masaki Fujiwara</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>waypoint_manager_msgs</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>waypoint_manager_msgs</exec_depend>

</package>
