<?xml version="1.0"?>
<package format="3">
  <name>waypoint_server</name>
  <version>0.0.0</version>
  <description>The waypoint_server package</description>

  <!-- Maintainer information -->
  <!-- <maintainer email="s16c1077hq@s.chibakoudai.jp">Naoki Takahashi</maintainer> -->
  <maintainer email="fmasaki2020@gmail.com">Masaki Fujiwara</maintainer>

  <!-- License information -->
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>waypoint_manager_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>waypoint_manager_msgs</exec_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
