<?xml version="1.0"?>
<package format="3">
  <name>waypoint_visualization</name>
  <version>0.1.0</version>
  <description>The waypoint_visualization package</description>

  <!-- <maintainer email="s16c1077hq@s.chibakoudai.jp">Naoki Takahashi</maintainer> -->
  <maintainer email="fmasaki2020@gmail.com">Masaki Fujiwara</maintainer>
  <license>MIT</license>

  <!-- ビルドツール依存関係 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ビルド時の依存関係 -->
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>interactive_markers</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>waypoint_manager_msgs</depend>

  <!-- 実行時の依存関係 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>waypoint_manager_msgs</exec_depend>

  <!-- エクスポート設定 -->
  <export>
    <!-- rvizプラグインの登録 -->
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
  </export>
</package>
